--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "fintools"
 version = "1.1.0"
 description = "Finance tools"
 authors = ["Jared Black <jaredblackjcb@gmail.com>"]
-readme = "../README.md"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -18,8 +18,6 @@ six = "1.16.0"
 sqlparse = "0.4.3"
 whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 gunicorn = "^20.1.0"
-
-[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry-core"]
