--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ six = "1.16.0"
 sqlparse = "0.4.3"
 whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 gunicorn = "^20.1.0"
+setuptools = "^65.5.0"
 
 [build-system]
 requires = ["poetry-core"]
