--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlparse = "0.4.3"
 whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 gunicorn = "^20.1.0"
 setuptools = "^65.5.0"
+requests = "^2.28.1"
 
 [build-system]
 requires = ["poetry-core"]
