--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 gunicorn = "^20.1.0"
 setuptools = "^65.5.0"
 requests = "^2.28.1"
+backtrader = "^1.9.76"
 
 [build-system]
 requires = ["poetry-core"]
