--- a/assets/package.json
+++ b/assets/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bulma",
+  "name": "assets",
   "version": "1.0.0",
   "description": "",
-  "main": "sass/styles.scss",
+  "private": "true",
   "scripts": {
     "css-build": "node-sass --omit-source-map-url sass/styles.scss ../static/css/styles.css",
     "css-watch": "npm run css-build -- --watch",
@@ -12,6 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "bulma": "^0.9.4",
-    "node-sass": "^7.0.3"
+    "node-sass": "^7.0.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "bulma-calendar": "^6.1.18",
+    "echarts": "^5.4.0"
   }
 }
