--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ setuptools = "^65.5.0"
 requests = "^2.28.1"
 backtrader = "^1.9.76"
 
+[tool.poetry.dev-dependencies]
+icecream = "^2.1.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
