--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "fintools"
-version = "1.1.1"
+name = "finmako"
+version = "1.1.2"
 description = "Finance tools"
 authors = ["Jared Black <jaredblackjcb@gmail.com>"]
 readme = "README.md"
